<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="main_header">Playlist maker</string>
    <string name="main_search">Поиск</string>
    <string name="main_media">Медиатека</string>
    <string name="main_settings">Настройки</string>
    <string name="settings_dark">Тёмная тема</string>
    <string name="settings_share">Поделиться приложением</string>
    <string name="settings_support">Написать в поддержку</string>
    <string name="settings_agreement">Пользовательское соглашение</string>
    <string name="media_activity">Media Activity</string>
    <string name="search_activity">Поиск</string>
    <string name="back_arrow_icon">back arrow icon</string>
    <string name="description_search_icon">search_icon</string>
    <string name="support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="support_message_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="link_to_android_course">https://practicum.yandex.ru/profile/android-developer-plus/</string>
    <string name="link_public_offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="email_support_message_sender">"sutemi67@gmail.com"</string>
    <string name="album_cover">album_cover</string>
    <string name="play_track_image">play_track_image</string>
    <string name="search_nothing_found">Ничего не нашлось</string>
    <string name="search_connection_problem">Проблемы со связью.\n\nЗагрузка не удалась. Проверьте ваше подключение к интернету</string>
    <string name="search_reload">Обновить</string>
    <string name="search_history_clean_button">Очистить историю</string>
    <string name="search_your_search">Вы искали:</string>
    <string name="player_like">like</string>
    <string name="player_play">play\n</string>
    <string name="player_add_to_favourites">add to favourites</string>
    <string name="player_duration">Длительность</string>
    <string name="player_album_name">Альбом</string>
    <string name="player_year">Год</string>
    <string name="player_genre">Жанр</string>
    <string name="player_country">Страна</string>
    <string name="player_error_loading_preview">Ошибка загрузки аудиофайла</string>
    <string name="mediateka">Медиатека</string>
    <string name="emptyMedia">Ваша медиатека пуста</string>
    <string name="noPlaylists">Вы не создали ни одного плейлиста</string>
    <string name="media_tabs">tabs of media menu</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="no_traks">Треков нет</string>
    <string name="share">Поделиться</string>
    <string name="edit_playlist">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="create">Создать</string>
    <string name="description">Описание</string>
    <string name="name_">Название*</string>
    <string name="image_cover">image_cover</string>
    <string name="options_menu">options_menu</string>
    <string name="share_button">share_button</string>
    <string name="title_activity_main_compose">MainComposeActivity</string>

</resources>