<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_margin="@dimen/margin_mainScreen_common_left"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/back_button"
            style="@style/BG_icons"
            android:layout_width="@dimen/button_settingScreen_back"
            android:layout_height="@dimen/button_settingScreen_back"
            android:backgroundTint="@color/YP_black"
            android:contentDescription="@string/back_arrow_icon"
            android:src="@drawable/ic_back_arrow" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/MessageTextStyle"
            android:layout_marginStart="16dp"
            android:text="@string/main_settings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <Switch
        android:layout_width="match_parent"
        style="@style/SettingsMenuButtons"
        android:text="@string/settings_dark"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:layout_width="match_parent"
        style="@style/SettingsMenuButtons"
        android:text="@string/settings_share"
        app:drawableEndCompat="@drawable/ic_share" />

    <TextView
        android:layout_width="match_parent"
        style="@style/SettingsMenuButtons"
        android:text="@string/settings_support"
        app:drawableEndCompat="@drawable/ic_support" />

    <TextView
        android:layout_width="match_parent"
        style="@style/SettingsMenuButtons"
        android:text="@string/settings_agreement"
        app:drawableEndCompat="@drawable/ic_agreement" />

</LinearLayout>