<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/BG_color"
    tools:context=".MainActivity">

    <TextView
        style="@style/MessageTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_mainScreen_common_left"
        android:layout_marginTop="14dp"
        android:text="@string/main_header" />

    <Button
        android:id="@+id/button_search"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/main_search"
        app:icon="@drawable/ic_search_light" />

    <Button
        android:id="@+id/button_media"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/main_media"
        app:icon="@drawable/ic_library" />

    <Button
        android:id="@+id/button_settings"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/main_settings"
        app:icon="@drawable/ic_settings_light" />

</LinearLayout>
